follow up with zig

--- a/TODO.org
+++ b/TODO.org
@@ -7,3 +7,5 @@
 - [ ] Workaround: Use shell script to generate your =.clangd=
   =-I${project_dir}/path=
 - [ ] Check viability of =compile_commands.json=
+* TODO Error handling for shader compile
+Currently, it just segfaults when I try to get InfoLog for shader compile errors.
